--- a/config.json
+++ b/config.json
@@ -3,6 +3,19 @@
     "search": "http://26.116.14.177:5678/webhook/49402b3d-6198-487a-bc6f-ed0afd539f82",
     "transcript": {
       "youtube": "http://26.116.14.177:5678/webhook/f78b0f26-44d2-4e57-9600-21853257659a"
-    }
-  }
+    },
+    "chat": "http://26.116.14.177:5678/webhook/2bf60de3-91a6-45b5-9556-bddc4d87b9b8"
+  },
+  "groq_models": [
+    "distil-whisper-large-v3-en",
+    "whisper-large-v3-turbo",
+    "llama-3.1-405b",
+    "llama-3.1-70b-versatile",
+    "llama-3.1-8b-instant",
+    "gemma2-9b-it",
+    "gemma-7b-it",
+    "mixtral-8x7b-32768",
+    "llama3-groq-70b-8192-tool-use-preview",
+    "llama3-groq-8b-8192-tool-use-preview"
+  ]
 }
